增加一个文件输出器